scrool fix on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ body {
   overflow-x: hidden; 
 }
 
-body::-webkit-scrollbar {
+html body::-webkit-scrollbar {
   display: none; 
 }
 
